参数设置完善

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -20,28 +20,40 @@
     <Setting Name="FrameT" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="K_near" Type="System.Double" Scope="User">
+    <Setting Name="NearK" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="Sample_near" Type="System.Double" Scope="User">
+    <Setting Name="SampleNear" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="Tr_near" Type="System.Double" Scope="User">
+    <Setting Name="TrNear" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="K_far" Type="System.Double" Scope="User">
+    <Setting Name="FarK" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="Sample_far" Type="System.Double" Scope="User">
+    <Setting Name="SampleFar" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="Tr_far" Type="System.Double" Scope="User">
+    <Setting Name="TrFar" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="ADC_start_time" Type="System.Double" Scope="User">
+    <Setting Name="StartADC" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="StartFreq" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="CfgPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="TxStart" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="RxGain" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="DetectModel" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
