--- a/Properties/default.cfg
+++ b/Properties/default.cfg
@@ -19,7 +19,7 @@ clutterRemoval -1 0
 compRangeBiasAndRxChanPhase 0.0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 
 measureRangeBiasAndRxChanPhase 0 1. 0.2 
 aoaFovCfg -1 -90 90 -90 90 
-cfarFovCfg -1 8 72.84 
+cfarFovCfg -1 0 8 72.84 
 cfarFovCfg -1 1 -10.59 10.59 
 extendedMaxVelocity -1 0 
 analogMonitor 0 0 
