--- a/Properties/default.cfg
+++ b/Properties/default.cfg
@@ -5,23 +5,25 @@ channelCfg 15 1 0
 adcCfg 2 1 
 adcbufCfg -1 0 1 1 1 
 lowPower 0 1 
-profileCfg 0 77 20 6 130 0 0 18.298 2 1024 10000 0 0 30 
-profileCfg 1 77 20 6 0 0 0 0 2 0 10000 0 0 30 
+profileCfg 0 77 20 6 130 0 0 18.298 2 1024 10000 0 0 0 
+profileCfg 1 77 20 6 130 0 0 2.4 2 1024 10000 0 0 0 
 chirpCfg 0 0 0 0 0 0 0 1 
 chirpCfg 1 1 1 0 0 0 0 1 
-frameCfg 0 0 32 0 40000 1 0 
+frameCfg 1 1 32 0 40 1 0 
 guiMonitor -1 1 1 0 0 0 0 
-cfarCfg -1 0 2 8 4 3 0 15.0 0 
-cfarCfg -1 1 0 4 2 3 1 15.0 0 
+cfarCfg -1 0 2 8 4 3 0 15.0 1 
+cfarCfg -1 1 0 4 2 3 1 15.0 1 
 multiObjBeamForming -1 1 0.5 
 calibDcRangeSig -1 0 -5 8 256 
 clutterRemoval -1 0 
 compRangeBiasAndRxChanPhase 0.0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 
-measureRangeBiasAndRxChanPhase 0 1. 0.2 
+measureRangeBiasAndRxChanPhase 0 1.5 0.2 
 aoaFovCfg -1 -90 90 -90 90 
 cfarFovCfg -1 0 8 72.84 
 cfarFovCfg -1 1 -10.59 10.59 
 extendedMaxVelocity -1 0 
+CQRxSatMonitor 0 3 5 121 0 
+CQSigImgMonitor 0 127 4 
 analogMonitor 0 0 
 lvdsStreamCfg -1 0 0 0 
 calibData 0 0 0 
