--- a/Properties/default.cfg
+++ b/Properties/default.cfg
@@ -1,29 +1,40 @@
 sensorStop 
 flushCfg 
-dfeDataOutputMode 1 
+dfeDataOutputMode 3 
 channelCfg 15 1 0 
 adcCfg 2 1 
 adcbufCfg -1 0 1 1 1 
-lowPower 0 1 
-profileCfg 0 77 20 6 130 0 0 18.298 2 1024 10000 0 0 0 
-profileCfg 1 77 20 6 130 0 0 2.4 2 1024 10000 0 0 0 
+lowPower 0 0 
+profileCfg 0 77 20 6 130 0 0 30 1 1024 10000 0 0 48 
+profileCfg 1 77 20 6 130 0 0 2.4 1 1024 10000 0 0 48 
 chirpCfg 0 0 0 0 0 0 0 1 
 chirpCfg 1 1 1 0 0 0 0 1 
-frameCfg 1 1 32 0 40 1 0 
-guiMonitor -1 1 1 0 0 0 0 
-cfarCfg -1 0 2 8 4 3 0 15.0 1 
-cfarCfg -1 1 0 4 2 3 1 15.0 1 
-multiObjBeamForming -1 1 0.5 
-calibDcRangeSig -1 0 -5 8 256 
+advFrameCfg 2 0 0 1 0 
+subFrameCfg 0 0 0 1 128 100 0 1 1 100 
+subFrameCfg 1 0 1 1 128 100 0 1 1 100 
+guiMonitor 0 1 1 0 0 0 0 
+guiMonitor 1 1 1 0 0 0 0 
+cfarCfg 0 0 2 8 4 3 0 15.0 1 
+cfarCfg 0 1 0 4 2 3 1 15.0 1 
+cfarCfg 1 0 2 8 4 3 0 15.0 1 
+cfarCfg 1 1 0 4 2 3 1 15.0 1 
+multiObjBeamForming 0 1 0.5 
+multiObjBeamForming 1 1 0.5 
+calibDcRangeSig 0 0 -5 8 256 
+calibDcRangeSig 1 0 -5 8 256 
+aoaFovCfg -1 -90 90 -90 90 
+cfarFovCfg 0 0 5.00  44.97 
+cfarFovCfg 1 0 62.46  562.11 
+cfarFovCfg 0 1 -40.58 40.58 
+cfarFovCfg 1 1 -40.58 40.58 
+CQRxSatMonitor  0   3   4   19  0 
+CQSigImgMonitor 0   31  4 
+CQRxSatMonitor  1   3   4   19  0 
+CQSigImgMonitor 1   31  4 
+analogMonitor 0 0 
+lvdsStreamCfg -1 0 0 0 
 clutterRemoval -1 0 
 compRangeBiasAndRxChanPhase 0.0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 
 measureRangeBiasAndRxChanPhase 0 1.5 0.2 
-aoaFovCfg -1 -90 90 -90 90 
-cfarFovCfg -1 0 8 72.84 
-cfarFovCfg -1 1 -10.59 10.59 
 extendedMaxVelocity -1 0 
-CQRxSatMonitor 0 3 5 121 0 
-CQSigImgMonitor 0 127 4 
-analogMonitor 0 0 
-lvdsStreamCfg -1 0 0 0 
 calibData 0 0 0 
