--- a/Properties/default.cfg
+++ b/Properties/default.cfg
@@ -1,3 +1,4 @@
+%这是用于兼顾模式下的参数配置 
 sensorStop 
 flushCfg 
 dfeDataOutputMode 3 
@@ -5,13 +6,13 @@ channelCfg 15 1 0
 adcCfg 2 1 
 adcbufCfg -1 0 1 1 1 
 lowPower 0 0 
-profileCfg 0 77 20 6 130 0 0 30 1 1024 10000 0 0 48 
-profileCfg 1 77 20 6 130 0 0 2.4 1 1024 10000 0 0 48 
+profileCfg 0 77 20 6 60 0 0 60 1 256 10000 0 0 52 
 chirpCfg 0 0 0 0 0 0 0 1 
+profileCfg 1 77 20 6 60 0 0 2.4 1 256 10000 0 0 52 
 chirpCfg 1 1 1 0 0 0 0 1 
 advFrameCfg 2 0 0 1 0 
-subFrameCfg 0 0 0 1 128 100 0 1 1 100 
-subFrameCfg 1 0 1 1 128 100 0 1 1 100 
+subFrameCfg 0 0 0 1 16 40 0 1 1 40 
+subFrameCfg 1 0 1 1 16 40 0 1 1 40 
 guiMonitor 0 1 1 0 0 0 0 
 guiMonitor 1 1 1 0 0 0 0 
 cfarCfg 0 0 2 8 4 3 0 15.0 1 
@@ -23,7 +24,7 @@ multiObjBeamForming 1 1 0.5
 calibDcRangeSig 0 0 -5 8 256 
 calibDcRangeSig 1 0 -5 8 256 
 aoaFovCfg -1 -90 90 -90 90 
-cfarFovCfg 0 0 5.00  44.97 
+cfarFovCfg 0 0 2.50  22.48 
 cfarFovCfg 1 0 62.46  562.11 
 cfarFovCfg 0 1 -40.58 40.58 
 cfarFovCfg 1 1 -40.58 40.58 
