--- a/Properties/success.cfg
+++ b/Properties/success.cfg
@@ -1,68 +1,41 @@
-sensorStop                                                  
-flushCfg
-dfeDataOutputMode 3
-channelCfg 15 1 0
-adcCfg 2 1
-adcbufCfg -1 0 1 1 1
-lowPower 0 0
-%
-% 500m max rxgain
-profileCfg 0    77  7   5   63  0   0   1.956947  1   256  10000   0   0   52
-% 80m max rxgain
-profileCfg 1    77  7   5   116   0   0  18.33   1   256  10000   0   0   52
-
-%
-chirpCfg 0 0 0 0 0 0 0 1
-%
-chirpCfg 1 1 1 0 0 0 0 1
-
-%
-advFrameCfg 2 0 0 1 0
-subFrameCfg 0 0 0 1 16 100 0 1 1 100
-subFrameCfg 1 0 1 1 16 100 0 1 1 100
-%
-guiMonitor 0 1 1 1 0 0 1
-guiMonitor 1 1 1 1 0 0 1
-%
-cfarCfg 0 0 2 8 4 3 0 15.0 0
-cfarCfg 0 1 0 4 2 3 1 15.0 0
-cfarCfg 1 0 2 8 4 3 0 15.0 1
-cfarCfg 1 1 0 4 2 3 1 15.0 1
-%
-multiObjBeamForming 0 1 0.5
-multiObjBeamForming 1 1 0.6
-%
-calibDcRangeSig 0 0 -3 3 256
-calibDcRangeSig 1 0 -2 2 256
-
-%
-aoaFovCfg -1 -90 90 -90 90
-cfarFovCfg 0 1 -40.58 40.58
-cfarFovCfg 1 1 -10.59 10.59
-
-cfarFovCfg  0 0 8.64 13.2
-cfarFovCfg  1 0 .25 8.64
-
-% Profle 0
-CQRxSatMonitor  0   3   4   19  0
-CQSigImgMonitor 0   31  4       
-% Profle 1
-CQRxSatMonitor  1   3   4   111 0
-CQSigImgMonitor 1   127 4          
-
-% CQ
-analogMonitor 0 0
-
-% LVDS streaming
-lvdsStreamCfg -1 0 0 0
-
-%
-clutterRemoval -1 0
-% 
-compRangeBiasAndRxChanPhase 0.0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0
-measureRangeBiasAndRxChanPhase 0 1. 0.2
-%
-extendedMaxVelocity -1 0
-calibData 0 0 0
-sensorStart
-
+%这是用于兼顾模式下的参数配置 
+sensorStop 
+flushCfg 
+dfeDataOutputMode 3 
+channelCfg 15 1 0 
+adcCfg 2 1 
+adcbufCfg -1 0 1 1 1 
+lowPower 0 0 
+profileCfg 0 77 20 6 60 0 0 60 1 256 10000 0 0 48 
+chirpCfg 0 0 0 0 0 0 0 1 
+profileCfg 1 77 20 6 60 0 0 2.4 1 256 10000 0 0 48 
+chirpCfg 1 1 1 0 0 0 0 1 
+advFrameCfg 2 0 0 1 0 
+subFrameCfg 0 0 0 1 16 40 0 1 1 40 
+subFrameCfg 1 0 1 1 16 40 0 1 1 40 
+guiMonitor 0 1 1 0 0 0 0 
+guiMonitor 1 1 1 0 0 0 0 
+cfarCfg 0 0 2 8 4 3 0 15.0 1 
+cfarCfg 0 1 0 4 2 3 1 15.0 1 
+cfarCfg 1 0 2 8 4 3 0 15.0 1 
+cfarCfg 1 1 0 4 2 3 1 15.0 1 
+multiObjBeamForming 0 1 0.5 
+multiObjBeamForming 1 1 0.5 
+calibDcRangeSig 0 0 -5 8 256 
+calibDcRangeSig 1 0 -5 8 256 
+aoaFovCfg -1 -90 90 -90 90 
+cfarFovCfg 0 0 2.50  22.48 
+cfarFovCfg 1 0 22.48  562.11 
+cfarFovCfg 0 1 -40.58 40.58 
+cfarFovCfg 1 1 -40.58 40.58 
+CQRxSatMonitor  0   3   4   19  0 
+CQSigImgMonitor 0   31  4 
+CQRxSatMonitor  1   3   4   19  0 
+CQSigImgMonitor 1   31  4 
+analogMonitor 0 0 
+lvdsStreamCfg -1 0 0 0 
+clutterRemoval -1 0 
+compRangeBiasAndRxChanPhase 0.0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 1 0 
+measureRangeBiasAndRxChanPhase 0 1.5 0.2 
+extendedMaxVelocity -1 0 
+calibData 0 0 0 
